# PhenoGeniusApp

./: .gitattributes  Dockerfile  README.md  phenogenius_app.py  pyproject.toml  requirements.txt
data/resources/: hpo_obo_2024.json  main_topics_hpo_390_42_filtered_norm_004_2024.tsv  pheno_NMF_390_matrix_42_2024.pkl  pheno_NMF_390_model_42_2024.pkl  similarity_dict_threshold_80_2024.json
