[tool.poetry]
name = "PhenoGenius_app"
version = "1.1.0"
description = ""
authors = ["kevin.yauy <kevin.yauy@chu-montpellier.fr>"]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=1.3.0"
ujson = "^5.4.0"
streamlit = "^1.11.1"
plotnine = "^0.13.0"
numpy = ">=1.24,<2.1"
scikit-learn = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
